--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -244,3 +244,8 @@ en:
         long: "%B %d, %Y %H:%M"
         short: "%d %b %H:%M"
       pm: pm
+  shared:
+    errors:
+      header:
+        one: "#{count} error detected"
+        other: "#{count} errors detected"
