--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,34 +1,3 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at https://guides.rubyonrails.org/i18n.html.
-
 en:
   tests_mailer:
     completed_test:
@@ -41,6 +10,67 @@ en:
   helpers:
     select:
       prompt: 'Please select:'
+    label:
+      tests:
+        title: Test title
+        level: Level
+        category_id: Category
+        create: Create
+        edit: Edit
+    submit:
+      create: Create
+      update: Save
+  tests:
+    test:
+      start: Start
+    index:
+      header: All tests
+      title: Test title
+      level: Level
+      category: Category
+      table_count_question: Number of questions
+      table_actions: Actions
+  test_passages:
+    result:
+      header: "%{title} test completed!"
+      result: "Your result is %{result}"
+      good: You passed the test successfully
+      bad: Unfortunately, you didn't do it 😔
+      this: This
+      score: "%{only} of %{total}"
+      right_answers: correct answers
+      back: To all tests
+    show:
+      header: "Passing test %{title}"
+      body: "%{body}"
+      question_order: "%{current} of %{total}"
+      next: Next question
+  admin:
+    tests:
+      success_create: Test created successfully
+      success_update: Test successfully updated
+      success_delete: Test successfully deleted
+      not_found: Test not found
+      index:
+        header: All tests
+        table_count_question: Number of questions
+        table_actions: Actions
+        new_test: Create test
+      show:
+        back: Back
+        edit_test: Edit test
+        add_question: Add a question
+      new:
+        header: Create a new test
+        back: Back
+      edit:
+        header: "Editing test %{title}"
+        back: Back
+      test:
+        show: Show
+        edit: Edit
+        delete: Delete
+        confirm: Are you sure?
   errors:
     format: "%{attribute} %{message}"
     messages:
