--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -13,6 +13,10 @@ ru:
       create: Создать
       update: Сохранить
   shared:
+    navigation:
+      welcome: Добро пожаловать
+      exit: Выйти
+      confirm: Вы уверены, что хотите выйти?
     errors:
       header:
         one: "#{count} ошибка"
@@ -73,6 +77,10 @@ ru:
         edit: Редактировать
         delete: Удалить
         confirm: Вы уверены?
+    nav:
+      header: TestGuru Admin
+      welcome: Добро пожаловать
+      exit: Выйти
   errors:
     format: "%{attribute} %{message}"
     messages:
