Add: локализация регистрации и входа

--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -11,6 +11,12 @@ ru:
         category_id: Категория
       question:
         body: Формулировка вопроса
+      user:
+        first_name: Имя
+        last_name: Фамилия
+        email: Электронная почта
+        password: Пароль
+        password_confirmation: Подтверждение пароля
     errors:
       messages:
         record_invalid: 'Возникли ошибки: %{errors}'
