--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -11,6 +11,12 @@ en:
         category_id: Category
       question:
         body: Question
+      user:
+        first_name: First name
+        last_name: Last name
+        email: Email
+        password: Password
+        password_confirmation: Password confirmation
     errors:
       messages:
         record_invalid: 'Validation failed: %{errors}'
