--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -35,6 +35,10 @@ ru:
       updated: "Ваш пароль успешно изменён. Теперь вы вошли в систему."
       updated_not_active: "Пароль успешно изменён."
     registrations:
+      new:
+        header: Стань Гуру
+        password_length: "(%{count} символов минимум)"
+        register: Зарегистрироваться
       destroyed: "До свидания! Ваша учётная запись успешно удалена. Надеемся снова увидеть вас."
       signed_up: "Добро пожаловать! Вы успешно зарегистрировались."
       signed_up_but_inactive: "Вы успешно зарегистрировались. Тем не менее, вы не можете войти, потому что ваша учетная запись ещё не активирована."
@@ -44,6 +48,10 @@ ru:
       updated: "Ваша учётная запись успешно изменена."
       updated_but_not_signed_in: "Ваш аккаунт успешно изменен, но так как ваш пароль изменился, нужно войти снова."
     sessions:
+      new:
+        header: Войти в TestGuru
+        remember_me: Запомнить меня
+        log_in: Войти
       signed_in: "Вход в систему выполнен."
       signed_out: "Выход из системы выполнен."
       already_signed_out: "Выход из системы выполнен."
