--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -54,6 +54,8 @@ en:
         header: Login to TestGuru
         remember_me: Remember me
         log_in: Log in
+      create:
+        welcome: "Hello, %{first_name} %{last_name}!"
       signed_in: "Signed in successfully."
       signed_out: "Signed out successfully."
       already_signed_out: "Signed out successfully."
