--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -65,6 +65,13 @@ en:
       send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
       send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
       unlocked: "Your account has been unlocked successfully. Please sign in to continue."
+    shared:
+      links:
+        log_in: Log in
+        register: Register
+        forgot_password: Forgot your password?
+        confirmation_instructions: Didn't receive confirmation instructions?
+        unlock_instructions: Didn't receive unlock instructions?
   errors:
     messages:
       already_confirmed: "was already confirmed, please try signing in"
