--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -61,6 +61,13 @@ ru:
       send_instructions: "В течение нескольких минут вы получите письмо с инструкциями по разблокировке вашей учётной записи."
       send_paranoid_instructions: "Если ваша учётная запись существует, то в течение нескольких минут вы получите письмо с инструкциями по её разблокировке."
       unlocked: "Ваша учётная запись разблокирована. Теперь вы вошли в систему."
+    shared:
+      links:
+        log_in: Войти
+        register: Зарегистрироваться
+        forgot_password: Забыли пароль?
+        confirmation_instructions: Не получили инструкции по подтверждению?
+        unlock_instructions: Не получили инструкции по разблокировке?
   errors:
     messages:
       already_confirmed: "уже подтверждена. Пожалуйста, попробуйте войти в систему"
