--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,9 +3,10 @@ en:
     completed_test:
       subject: You just completed the TestGuru test
   shared:
-    navigation:
+    navbar:
       welcome: Welcome
       exit: Exit
+      admin_panel: Admin Panel
       confirm: Are you sure you want to log out?
     footer:
       author: Author
@@ -80,11 +81,6 @@ en:
         edit: Edit
         delete: Delete
         confirm: Are you sure?
-    nav:
-      header: TestGuru Admin
-      welcome: Welcome
-      exit: Exit
-      confirm: Are you sure you want to log out?
   errors:
     format: "%{attribute} %{message}"
     messages:
