--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -81,6 +81,8 @@ en:
         edit: Edit
         delete: Delete
         confirm: Are you sure?
+      form:
+        back: Back
   errors:
     format: "%{attribute} %{message}"
     messages:
