Fix: локализация страницы просмотра вопроса

--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -3,6 +3,7 @@ en:
     models:
       test: Test
       question: Question
+      answer: Answer
     attributes:
       test:
         title: Title
