--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -3,6 +3,7 @@ ru:
     models:
       test: Тест
       question: Вопрос
+      answer: Ответ
     attributes:
       test:
         title: Название теста
