Add: локализация страниц просмотра вопроса, редактирования и создания

--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -12,6 +12,9 @@ en:
         category_id: Category
       question:
         body: Question
+      answer:
+        body: Answer
+        correct: Correct
       user:
         first_name: First name
         last_name: Last name
