Add: ссылка на созданный gist во flash-сообщении

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,7 +53,7 @@ en:
       right_answers: correct answers
       back: To all tests
     gist:
-      success: Gist saved successfully!
+      success: "%{gist_link} saved successfully!"
       failure: An error occurred while saving gist
     show:
       header: "Passing test %{title}"
