--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -4,6 +4,7 @@ ru:
       test: Тест
       question: Вопрос
       answer: Ответ
+      gist: Gist
     attributes:
       test:
         title: Название теста
@@ -21,6 +22,10 @@ ru:
         email: Электронная почта
         password: Пароль
         password_confirmation: Подтверждение пароля
+      gist:
+        question: Вопрос
+        url: Gist URL
+        user: Email пользователя
     errors:
       messages:
         record_invalid: 'Возникли ошибки: %{errors}'
