--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -125,6 +125,9 @@ ru:
       show:
         edit: Редактировать
         back: Назад
+    gists:
+      index:
+        header: Gists
   errors:
     format: "%{attribute} %{message}"
     messages:
