--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,6 +7,7 @@ en:
       welcome: Welcome
       exit: Exit
       admin_panel: Admin Panel
+      gists: Gists
       confirm: Are you sure you want to log out?
     footer:
       author: Author
