Add: редактирование названия теста на форме отображения всех тестов для админа

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -91,6 +91,8 @@ en:
         confirm: Are you sure?
       form:
         back: Back
+      form_inline:
+        submit: OK
     questions:
       question:
         actions: Actions
