--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -45,7 +45,7 @@ ru:
   test_passages:
     result:
       header: "Тест %{title} завершен!"
-      result: "Ваш результат  %{result}"
+      result: "Ваш результат  %{result}%"
       bad: К сожалению, Вы не справились 😔
       good: Вы успешно прошли тест
       this: Это
