Fix: нельзя начать проходить тест без вопросов

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,6 +47,8 @@ en:
       category: Category
       table_count_question: Number of questions
       table_actions: Actions
+    start:
+      no_questions: This test contains no questions and cannot be taken yet
   test_passages:
     result:
       header: "%{title} test completed!"
