Fix: локализация ссылки для обратной связи

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -29,7 +29,8 @@ ru:
       confirm: Вы уверены, что хотите выйти?
     footer:
       author: Автор
-      info: 'Учебный проект в онлайн-школе '
+      feedback: Связаться со мной
+      info: Учебный проект в онлайн-школе
     errors:
       header:
         one: "Обнаружена %{count} ошибка"
