--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,7 +11,8 @@ en:
       confirm: Are you sure you want to log out?
     footer:
       author: Author
-      info: 'Educational project in online school '
+      feedback: Contact with me
+      info: Educational project in online school
     errors:
       header:
         one: "%{count} error detected"
