--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -4,6 +4,7 @@ en:
       test: Test
       question: Question
       answer: Answer
+      badge: Badge
     attributes:
       test:
         title: Title
@@ -21,6 +22,11 @@ en:
         email: Email
         password: Password
         password_confirmation: Password confirmation
+      badge:
+        name: Name
+        picture: Picture
+        rule_name: Rule
+        parameter: Parameter
     gist:
       question: Question
       url: Gist URL
