--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -61,6 +61,7 @@ en:
       this: This
       score: "%{only} of %{total}"
       right_answers: correct answers
+      earned_badge: Congratulations, you've earned your badge!
       back: To all tests
     gist:
       success: "%{gist_link} saved successfully!"
