--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -60,6 +60,7 @@ ru:
       this: Это
       score: "%{only} из %{total}"
       right_answers: верных ответов
+      earned_badge: Поздравляем, Вы заработали бейдж!
       back: Ко всем тестам
     gist:
       success: "%{gist_link} успешно сохранен!"
