Add: задание таймера на форме создания/редактирования теста

--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -11,6 +11,7 @@ en:
         level: Level
         category: Category
         category_id: Category
+        timer: Timer (in minutes)
       question:
         body: Question
       answer:
