--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -117,6 +117,7 @@ en:
         delete: Delete
         confirm: Are you sure?
       form:
+        time_to_pass: Time to pass the test
         back: Back
       form_inline:
         submit: OK
