Add: отображение в таблице тестов времени на их прохождение

--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -11,7 +11,7 @@ en:
         level: Level
         category: Category
         category_id: Category
-        timer: Timer (in minutes)
+        timer: Timer
       question:
         body: Question
       answer:
