--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -12,7 +12,7 @@ ru:
         level: Уровень
         category: Категория
         category_id: Категория
-        timer: Таймер (в минутах)
+        timer: Таймер
       question:
         body: Формулировка вопроса
       answer:
