--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -119,6 +119,7 @@ en:
         delete: Delete
         confirm: Are you sure?
       form:
+        format: (in minutes)
         time_to_pass: Time to pass the test
         back: Back
       form_inline:
