--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -120,6 +120,7 @@ ru:
         delete: Удалить
         confirm: Вы уверены?
       form:
+        format: (в минутах)
         time_to_pass: Время на прохождение теста
         back: Назад
       form_inline:
